# stallone

./: .gitignore  .hgignore  DBUS-API.txt  INSTALL  Makefile.am  Makefile.am.common  NEWS  NOTES  THANKS  TODO  aclocal.m4  autogen.sh  avahi-natpmd.action  bootstrap.sh  caps.c  caps.h  common.c  common.h  configure.ac  design.txt  interface.c  interface.h  ipc.c  ipc.h  maplist.c  maplist.h  natmap.c  natmap.h  natpmd-config.c  natpmd-config.h  natpmd.action  natpmd.c  natpmd.conf.in  packetdump.c  packetdump.h  protocol.txt  somenotes.txt  stallone.8.txt  stallone.8.txt.in  stallone.action  (+6 more)
avahi-common/: Makefile.am  gccmacro.h  ini-file-parser.c  malloc.c  malloc.h  setproctitle.c
extras/monit/: stallone  stallone-pmp-daemon
lib/: Makefile.am  lstat.c  malloc.c  memcmp.c  realloc.c  stat.c
man/: Makefile.am  stallone.8  stallone.8.txt.in
testclient/: Makefile.am  gateway.c  gateway.h  testclient.c
tests/: .gitignore  Makefile.am  test-interface-vis.c  test_maplist.c  test_natmap.c
