# This file is part of Stallone
# Copyright 2007  Ted Percival <ted@midg3t.net>
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation; either version 2.1 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
# License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
# USA.

SUBDIRS = \
      avahi-common \
      tests \
      testclient \
   # end

TESTS = \
        $(check_PROGRAMS) \
        # end


pkgsysconfdir = $(sysconfdir)/avahi

NATPMD_DEFAULT_CONFIG_FILE = $(pkgsysconfdir)/natpmd.conf
NATPMD_DEFAULT_MAPPING_SCRIPT = $(pkgdatadir)/natpmd.action
NATPMD_DEFAULT_MIN_PORT = 30800
NATPMD_DEFAULT_MAX_PORT = 30999
NATPMD_CHROOT_DIR = $(localstatedir)

AM_CPPFLAGS = \
    -I$(top_srcdir) \
    -DNATPMD_DEFAULT_CONFIG_FILE=\"$(NATPMD_DEFAULT_CONFIG_FILE)\" \
    -DNATPMD_DEFAULT_MAPPING_SCRIPT=\"$(NATPMD_DEFAULT_MAPPING_SCRIPT)\" \
    -DNATPMD_DEFAULT_MIN_PORT=$(NATPMD_DEFAULT_MIN_PORT) \
    -DNATPMD_DEFAULT_MAX_PORT=$(NATPMD_DEFAULT_MAX_PORT) \
    -DNATPMD_CHROOT_DIR=\"$(NATPMD_CHROOT_DIR)\" \
    # end

sbin_PROGRAMS = stallone
check_PROGRAMS = test-caps

stallone_SOURCES = \
                       caps.c caps.h \
                       common.c common.h \
                       interface.c interface.h \
                       ipc.c ipc.h \
                       maplist.c maplist.h \
                       natmap.c natmap.h \
                       natpmd.c \
                       natpmd-config.c natpmd-config.h \
                       packetdump.c packetdump.h \
                       timer.c timer.h \
                       worker.c worker.h \
                       # end of list

stallone_LDADD = \
                     $(LIBDAEMON_LIBS) \
                     $(top_builddir)/avahi-common/libavahi-common.a

stallone_CPPFLAGS = \
                    $(AM_CPPFLAGS) \
                    -DNATPMD_DEFAULT_CONFIG_FILE=\"$(NATPMD_DEFAULT_CONFIG_FILE)\" \
                    # end

test_caps_SOURCES = \
                    caps.c caps.h \
                    test-caps.c \
                    # end

test_caps_LDADD = \
                  $(LIBDAEMON_LIBS) \
                  #end

pkgdata_SCRIPTS = avahi-natpmd.action

stallone.8.html: stallone.8.txt
	asciidoc -d manpage stallone.8.txt

stallone.8.txt: stallone.8.txt.in
	echo "// This file is automatically generated from $^" > $@
	sed -e 's,@NATPMD_DEFAULT_CONFIG_FILE@,$(NATPMD_DEFAULT_CONFIG_FILE),g' \
	    -e 's,@NATPMD_DEFAULT_MAPPING_SCRIPT@,$(NATPMD_DEFAULT_MAPPING_SCRIPT),g' \
	    -e 's,@NATPMD_DEFAULT_MIN_PORT@,$(NATPMD_DEFAULT_MIN_PORT),g' \
	    -e 's,@NATPMD_DEFAULT_MAX_PORT@,$(NATPMD_DEFAULT_MAX_PORT),g' \
	    < $^ >> $@

CLEANFILES = \
             stallone.8.txt \
             stallone.8.html

EXTRA_DIST = \
             avahi-natpmd.action \
             stallone.8.txt.in \
             NEWS

# vim: ts=4 sw=4 et tw=80
