

noinst_LIBRARIES = libavahi-common.a

libavahi_common_a_SOURCES = \
			    address.c \
			    address.h \
			    cdecl.h \
			    fdutil.c \
			    fdutil.h \
			    gccmacro.h \
			    llist.h \
			    malloc.c \
			    malloc.h \
			    setproctitle.c \
			    setproctitle.h \
			    # end of list
